--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -29,7 +29,6 @@ body {
   font-weight: $weight-standard;
   color: $black;
   // delete ↓
-  background: $primary;
   color: yellow;
 }
 
