--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,9 +130,7 @@ button:active {
 
 .navbar-dropdown-menu {
   width: 100%;
-  height: calc(100vh - 88px);
   flex-direction: column;
-  background: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 88px;
   z-index: 5;
@@ -192,6 +190,15 @@ button:active {
 .navbar-btns button.navbar-btn.white {
   background-color: #ffffff;
   color: #000000;
+}
+
+.navbar-dropdown-opacity {
+  position: absolute;
+  width: 100%;
+  height: calc(100vh - 88px);
+  background-color: #000000;
+  opacity: 0.5;
+  z-index: -1;
 }
 
 .section-1 {
@@ -283,7 +290,6 @@ body {
   line-height: 18px;
   font-weight: 400;
   color: #000000;
-  background: #a8ff35;
   color: yellow;
 }
 
